few debug and adding functionality add

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/J6MdL8VVK5LZ5q6bhiwY1f12Zl9eW93G6E6QZ1bR3x8qGZ4Vn5x2bR0wS8rJzQ8oWf3B1ZrYg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Course Management System</title>
   </head>
   <body>
     <div id="root"></div>
